--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "vitest": "^1.6.0"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "better-sqlite3": "^8.7.0",
     "discord.js": "^14.15.3",
     "dotenv": "^16.3.1",
